# LLM-101

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
apps/admin/: README.md  package.json
apps/api/: Dockerfile  main.py
apps/playground/: README.md  package.json
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts
datasets/: README.md  instruction_samples.jsonl
docs/: architecture.md  learning-path.md  security.md
infra/docker/: docker-compose.yml
infra/k8s/: README.md
infra/monitoring/: prometheus.yml
infra/terraform/: README.md
models/configs/: model_catalog.yaml
notebooks/: llm101_tokenizer.ipynb
scripts/: bootstrap.ps1  download_models.py
services/agents/: code_sandbox.py  coding_assistant.py  document_assistant.py  langgraph_agent.py
services/embeddings/: embed_qdrant.py
services/evals/: benchmark_runner.py  run_eval.py
services/finetune/: axolotl_qlora.yml  lora_config.py
services/guardrails/: safety_gate.py
services/inference/: chat_template_demo.py  kv_cache_demo.py  llama_cpp_server.py  multi_lora_demo.py  prompt_caching_demo.py  quantization_demo.py  sglang_server.py  speculative_decoding.py  structured_output_demo.py  tokenizer_demo.py  vllm_server.py
services/ingestion/: chunker.py  document_loader.py
services/multimodal/: vision_ocr.py
services/observability/: metrics.py
services/rag/: corrective_rag.py  graph_rag.py  pipeline.py
services/reranker/: rerank.py
services/routing/: router.py
(+5 files in other folders)
