[project]
name = "llms-101"
version = "0.1.0"
description = "Reference implementation for local LLM systems: inference, RAG, agents, evals, and ops."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.40.0",
  "pydantic>=2.8.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "qdrant-client>=1.10.0",
  "sentence-transformers>=3.0.0",
  "transformers>=4.44.0",
  "langchain-text-splitters>=0.2.2",
  "langgraph>=0.2.0",
  "datasets>=2.20.0",
  "ragas>=0.1.12",
  "deepeval>=1.1.0",
  "peft>=0.12.0",
  "pymupdf>=1.24.0",
  "docling>=2.0.0",
  "huggingface-hub>=0.24.0"
]

[project.optional-dependencies]
gpu = [
  "vllm>=0.6.0",
  "llama-cpp-python>=0.2.90",
  "sglang>=0.3.0"
]
ocr = [
  "paddleocr>=2.8.0"
]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
